updating scores and questions display